<resources>
    <string name="app_name">CourseFitApp</string>
    <string name="welcome_message">Welcome to \nCourseFit!</string>
    <string name="signupButtonText">Sign Up</string>
    <string name="signinButtonText">Sign In</string>
    <string name="mainMenuText">Main Menu</string>
    <string name="startButtonText">Start Assessment</string>
    <string name="historyButtonText">History</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="nextText">Next</string>
    <string name="tidakText">Tidak</string>
    <string name="yaText">Ya</string>
    <string name="submitText">Submit</string>
    <string name="resultsText">Results</string>
    <string name="signoutButtonText">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_session_text">"Session " + (dataList.indexOf(pointsData.getValue()) + 1) + " - " + timestamp</string>

</resources>