<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/signupButtonText"
        android:textSize="34sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="272dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="text"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="208dp"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="12dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/usernameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="336dp"
        android:paddingStart="12dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_password"
        android:drawablePadding="12dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toSignInPageLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="645dp"
        android:clickable="true"
        android:text="Sign In"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="400dp"
        android:drawableStart="@drawable/baseline_navigate_next_24"
        android:paddingStart="19dp"
        android:background="@drawable/circular_button_bg_enabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>