<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:text="@string/signinButtonText"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="272dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="text"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="336dp"
        android:paddingStart="12dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_password"
        android:drawablePadding="12dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="400dp"
        android:drawableStart="@drawable/baseline_navigate_next_24"
        android:paddingStart="19dp"
        android:background="@drawable/circular_button_bg_enabled"
        android:contentDescription="Proceed button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:clickable="true"
        android:text="Don't have an account? "
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toSignUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:clickable="true"
        android:text="Sign Up"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/circular_button_bg_enabled"
        android:clickable="false"
        android:progress="@integer/material_motion_duration_long_1"
        android:progressBackgroundTint="#0076C6B8"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="@+id/nextButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nextButton"
        app:layout_constraintTop_toTopOf="@+id/nextButton"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/warnError"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/circular_button_bg_enabled"
        android:foreground="@drawable/ic_error_outline"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/nextButton"
        app:srcCompat="@drawable/circular_button_bg_enabled"
        tools:visibility="visible"
        android:contentDescription="Warning symbol for error." />

</androidx.constraintlayout.widget.ConstraintLayout>